# aws-curl-lite

./: README.md  pyproject.toml
src/aws_curl_lite/: __init__.py  cli.py
