[project]
name = "aws-curl-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dave Carey", email = "dacarey@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.19",
    "requests>=2.28.0",
]

[project.scripts]
aws-curl-lite = "aws_curl_lite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
